--- a/src/app.html
+++ b/src/app.html
@@ -37,7 +37,7 @@
                         </div>
                     </nav>
 
-                    <div id="router-view" class="page-host flexcontainer" css="min-height:${router_view_height};margin:0;padding:0;">
+                    <div id="router-view" class="page-host flexcontainer" css="min-height:${router_view_height};">
                         <router-view></router-view>
                     </div>
                 </div>
