--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -1,25 +1,18 @@
 <template>
-    <require from='./photo-strip.css'></require>
-    <div class="row slides-list" css="height: ${height}px;width: ${width};margin-left:auto;margin-right:auto;z-index:0;">
-        <help style="position:absolute;bottom:0px;" topic.bind="photo-strip" position="right"></help>
-        <div if.bind="settings.arrows" class="slide-control next" click.trigger="next_slide($event)">
-            <div style="position:relative">
-                <i class="fa fa-chevron-right fa-3x"></i>
-                <i class="fa fa-chevron-right fa-2x" style="color:black;top:6px;left:0px;position:absolute;"></i>
-            </div>
+    <div class="row slide-list" css="height: ${height}px;" element.ref="slideList"
+        interact-draggable.bind="theme.interact_setting" interact-dragmove.delegate="shift_photos($event.detail.dx)">
+        <img repeat.for="slide of slides.concat(slides)" id="img-${slide.photo_id}" src="${slide.src}" height="${height}" aubs-tooltip="text.bind:slide.title" mouseup.delegate="on_click($event, slide)" />
+    </div>
+    <help style="position:absolute;bottom:0px;" topic.bind="photo-strip" position="right"></help>
+    <template if.bind="settings.arrows">
+        <div class="slide-control next" click.trigger="next_slide($event)">
+            <i class="fa fa-chevron-right fa-3x"></i>
+            <i class="fa fa-chevron-right fa-2x" style="color:black;top:6px;left:0px;position:absolute;"></i>
         </div>
         <div if.bind="settings.arrows" class="slide-control prev" click.trigger="prev_slide($event)">
-            <div style="position:relative">
-                <i class="fa fa-chevron-left fa-3x"></i>
-                <i class="fa fa-chevron-left fa-2x" style="color:black;top:6px;left:10px;position:absolute;"></i>
-            </div>
+            <i class="fa fa-chevron-left fa-3x"></i>
+            <i class="fa fa-chevron-left fa-2x" style="color:black;top:6px;left:10px;position:absolute;"></i>
         </div>
-
-        <div interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_photos($event)"
-            <a repeat.for="slide of slides" style="float:right;z-index:100;" >
-                <img id="img-${slide.photo_id}" click.delegate="on_click(slide, $event)" src="${slide.src}" height="${height}" style="width:initial;" aubs-tooltip="text.bind:slide.title" />
-            </a>
-        </div>
-    </div>
+    </template>
 
 </template>
