--- a/src/resources/elements/date-range.html
+++ b/src/resources/elements/date-range.html
@@ -29,7 +29,7 @@
         <div class="form-group" show.bind="show_date" style="width:5em;">
             <span style="padding-top:0.6em;">${base_date_str}</span>
         </div>
-        <div if.bind="build_now()"></div>
+        <div if.bind="build_now"></div>
         
     </form>
 </template>
