--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -17,7 +17,7 @@
             </form>
         </div>
         <div class="row">
-            <div class="col-md-7" style="padding-left:40px;" click.trigger="open_full_size_photo()">
+            <div class="col-md-7" click.trigger="open_full_size_photo()">
                 <img src.bind="photo_src" width="${photo_width}" />
             </div>
             <div class="col-md-5">
@@ -32,6 +32,9 @@
                             <p dir="rtl" if.bind="! user.editing" innerhtml.bind="photo_story.story_text">
                             </p>
                             <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-section', checkable: false}" story.bind="photo_story"></editable>
+                            <date-range label="${'photos.photo-date' & t}" base_date_str.bind="photo_date_str" span_size.bind="photo_date_span"
+                                change.delegate="update_photo_date($event)">
+                            </date-range>
                         </div>
                     </div>
                 </div>
