--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -96,7 +96,7 @@
                         <compose view-model="./member-edit" model.bind="member"></compose>
                     </div>
                 </div>
-                <div class="col-md-6 fr-view style="margin-bottom:16px;padding-left:20px;" 
+                <div class="col-md-6 fr-view" style="margin-bottom:16px;padding-left:20px;padding-right:30px;" 
                         if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
                         <h4 innherhtml.bind="story_0.topic" style="margin-top:16px;margin-bottom:0px;color:gray;">
                             ${'members.life-summary' & t} ${member.member_info.first_name}
