--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -1,13 +1,13 @@
 <template>
     <require from='./photos.css'></require>
     <section class="container content-area" css="height: ${win_height-600}px;">
-        <div class="row top-head" css="height:96px;margin-top:60px;background-image:url('${theme.files.top_background}');">
+        <!--<div class="row top-head" css="height:96px;margin-top:60px;background-image:url('${theme.files.top_background}');">
             <div style="padding-top:0px;padding-right:15px;">
                 <h1 if.bind="caller_type" dir="rtl">${'members.' + caller_type & t}</h1>
                 <h1 if.bind="!caller_type" dir="rtl">${"photos.photos-store" & t}</h1>
             </div>
-        </div>
-        <div class="row content-area" style="height:300px;width:100%;margin-bottom:24px;" dir="rtl">
+        </div>-->
+        <div class="row content-area" style="height:300px;width:100%;margin-bottom:24px;margin-top:160px;padding-right:46px;" dir="rtl">
             <div class="row">
                 <div class="col-md-1" css="padding-top: 40px;position:relative">
                     <span css="position:absolute"></help>${'photos.more' & t}<help topic="photos.slider" position="right"></span>
