--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -1,12 +1,12 @@
 <template>
     <require from="./stories.css"></require>
     <section class="container content-area">
-        <div class="row top-head" css="height:96px;margin-top:60px;background-image:url('${theme.files.top_background}');">
+        <!--<div class="row top-head" css="height:96px;margin-top:60px;background-image:url('${theme.files.top_background}');">
             <div style="padding-top:0px;padding-right:15px;">
                 <h1 dir="rtl">${"stories.place-stories" & t}</h1>
             </div>
-        </div>
-        <div class="row content-area" style="height:300px;width:100%;margin-top:20px;" dir="rtl">
+        </div>-->
+        <div class="row content-area" style="height:300px;width:100%;margin-top:160px;padding-right:36px;" dir="rtl">
             <div class="row">
                 <div class="col-md-1">
                 </div>
