--- a/src/home/home.html
+++ b/src/home/home.html
@@ -2,64 +2,66 @@
     <require from='./home.css'></require>
 
     <!-- Photo strip -->
-    <div id="photo-strip" class="row">
+    <div id="photo-strip">
         <photo-strip source.bind="photo_list" slides.bind="slides" id="1" action.bind="action" fullscreen.bind="true" height_change.trigger="on_height_change($event)"
             action_key="Zoom1" settings.bind="{arrows:true, slide_show: 8}"></photo-strip>
     </div>
 
-    <div class="row panel main-panel">
-        <div class="col-md-3 panel-vid" style="direction:rtl;">
-            <ul>
-                <li repeat.for="video of video_list | filter:'youtube':'type'">
-                    <p>
-                        <span class="fr-video fr-fvc fr-draggable fr-dvi" contenteditable="false" draggable="true">
-                            <iframe src.bind="video.src" frameborder="0" allowfullscreen="" style="width: 204px; height: 121px;">
-                            </iframe>
-                        </span>
-                    </p>
-                </li>
-            </ul>
-        </div>
-        <div class="col-md-6 panel-stories" style="direction:rtl;">
-            <h2 style="margin-top:0;">
-                ${'home.sample-stories' & t}
-                <span style="float:left;font-size:80%;color:gray;direction:rtl;cursor:pointer;" click.delegate="goto_full_collection()">
-                    ${'home.full-collection' & t} 
-                    <i class="fa fa-play fa-rotate-180"> </i>
-                </span>
-            </h2>
-            <ul class="panel-story-segments">
-                <li repeat.for="story of stories_sample" dir="rtl">
-                    <div style="margin-top:12px;max-height:100px;min-height:100px;padding-bottom:30px;border-bottom:solid 2px lightgray;position:relative;" >
-                        <h4 dir="rtl" style="float:right;margin:0;padding:0;cursor:pointer;font-weight:bold;" click.delegate="jump_to_the_full_story(story)">
-                            ${story.name}
-                        </h4>
-                        <div class="story-prefix">
-                            <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story.story" 
-                                style="text-align:right;max-height:50px;width:100%;overflow:hidden;">
-                            </p>
+    <div class="container">
+        <div class="row panel main-panel">
+            <div class="col-md-3 panel-vid" style="direction:rtl;">
+                <ul>
+                    <li repeat.for="video of video_list | filter:'youtube':'type'">
+                        <p>
+                            <span class="fr-video fr-fvc fr-draggable fr-dvi" contenteditable="false" draggable="true">
+                                <iframe src.bind="video.src" frameborder="0" allowfullscreen="" style="width: 204px; height: 121px;">
+                                </iframe>
+                            </span>
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6 panel-stories" style="direction:rtl;">
+                <h2 style="margin-top:0;">
+                    ${'home.sample-stories' & t}
+                    <span style="float:left;font-size:80%;color:gray;direction:rtl;cursor:pointer;" click.delegate="goto_full_collection()">
+                        ${'home.full-collection' & t} 
+                        <i class="fa fa-play fa-rotate-180"> </i>
+                    </span>
+                </h2>
+                <ul class="panel-story-segments">
+                    <li repeat.for="story of stories_sample" dir="rtl">
+                        <div style="margin-top:12px;max-height:100px;min-height:100px;padding-bottom:30px;border-bottom:solid 2px lightgray;position:relative;" >
+                            <h4 dir="rtl" style="float:right;margin:0;padding:0;cursor:pointer;font-weight:bold;" click.delegate="jump_to_the_full_story(story)">
+                                ${story.name}
+                            </h4>
+                            <div class="story-prefix">
+                                <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story.story" 
+                                    style="text-align:right;max-height:50px;width:100%;overflow:hidden;">
+                                </p>
+                            </div>
+                            <div style="position:absolute;bottom:0px;left:12px;cursor:pointer;">
+                                <a click.delegate="jump_to_the_full_story(story)">
+                                    <span if.bind="story.used_for==api.constants.story_type.STORY4EVENT" dir="${theme.rtltr}">
+                                        ${'stories.to-the-full-story' & t }...
+                                    </span>
+                                </a>
+                            </div>
                         </div>
-                        <div style="position:absolute;bottom:0px;left:12px;cursor:pointer;">
-                            <a click.delegate="jump_to_the_full_story(story)">
-                                <span if.bind="story.used_for==api.constants.story_type.STORY4EVENT" dir="${theme.rtltr}">
-                                    ${'stories.to-the-full-story' & t }...
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="col-md-3 panel-messages" style="direction: rtl">
-            <h2 style="margin:0;margin-bottom:12px;">${'home.messages' & t}
-                <span class="is-link" if.bind="user.editing" click.delegate="add_message()"><i class="fa fa-plus-square-o"></i></span>
-            </h2>
-            <ul class="message">
-                <li repeat.for="msg of message_list" dir="rtl" style="border-bottom: solid 2px gray;margin-bottom:10px;" >
-                    <editable story.bind="msg" settings.bind="{show_date:true, deletable: true}"
-                        change.delegate="hande_story_change(msg, $event)"></editable>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3 panel-messages" style="direction: rtl">
+                <h2 style="margin:0;margin-bottom:12px;">${'home.messages' & t}
+                    <span class="is-link" if.bind="user.editing" click.delegate="add_message()"><i class="fa fa-plus-square-o"></i></span>
+                </h2>
+                <ul class="message">
+                    <li repeat.for="msg of message_list" dir="rtl" style="border-bottom: solid 2px gray;margin-bottom:10px;" >
+                        <editable story.bind="msg" settings.bind="{show_date:true, deletable: true}"
+                            change.delegate="hande_story_change(msg, $event)"></editable>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="member-of-the-day row" dir="rtl">
