--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -6,8 +6,8 @@
                 <h1 dir="rtl">${"stories.place-stories" & t}</h1>
             </div>
         </div>-->
-        <div class="row content-area" style="height:300px;width:100%;margin-top:160px;padding-right:36px;" dir="rtl">
-            <div class="row">
+        <div class="row content-area" style="width:100%;margin-top:160px;padding-right:36px;" dir="rtl">
+            <div class="row" style="height:675px;">
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-8">
