--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -7,7 +7,7 @@
             </div>
         </div>-->
         <div class="row content-area" style="height:300px;width:100%;margin-top:20px;" dir="rtl">
-            <div class="row">
+            <div class="row" style="padding-top:140px">
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-8">
@@ -26,7 +26,7 @@
                             </div>
                         </div>
                     </div>
-                    <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;padding-left:20px;">
+                    <ul style="width:100%;padding:0;float:right;height:597px;overflow:auto;list-style-type: none;padding-left:20px;">
                         <li repeat.for="term of term_list | filter: filter : 'name' : 'author'" 
                             dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;">
                             <div style="height:130px;overflow:hidden;padding:20px;">
