--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -1,10 +1,10 @@
 <template>
     <div class="row slide-list" css="height: ${height}px;" element.ref="slideList"
-        interact-draggable.bind="theme.interact_setting" interact-dragmove.delegate="shift_photos($event.detail.dx)">
-        <img repeat.for="slide of slides.concat(slides)" id="img-${slide.photo_id}" src="${slide.src}" height="${height}" aubs-tooltip="text.bind:slide.title" mouseup.delegate="on_click($event, slide)" />
+        interact-draggable.bind="theme.interact_setting" interact-dragmove.delegate="drag_photos($event)">
+        <img repeat.for="slide of slides" id="img-${slide.photo_id}" src="${slide.src}" aubs-tooltip="text.bind:slide.title" click.delegate="on_click($event, slide)" />
     </div>
-    <help style="position:absolute;bottom:0px;" topic.bind="photo-strip" position="right"></help>
-    <template if.bind="settings.arrows">
+    <help topic.bind="photo-strip" position="right"></help>
+    <template if.bind="settings.arrows && show_arrows">
         <div class="slide-control next" click.trigger="next_slide($event)">
             <i class="fa fa-chevron-right fa-3x"></i>
             <i class="fa fa-chevron-right fa-2x" style="color:black;top:6px;left:0px;position:absolute;"></i>
