--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -13,12 +13,10 @@
             <photo-strip class="col-xs-12" source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom"
                 settings.bind="{arrows:true, height:220}"></photo-strip>
         </div>
-        <div class="row" style="min-height:280px;" dir="rtl">
+        <div id="member-detail-content" class="row" dir="rtl">
             <div class="col-md-6">
-                <div class="row" if.bind="member.family_connections.hasFamilyConnections">
-                    <h3>${'members.family-connections' & t}</h3>
-                </div>
-                <div class="row family-chains">
+                <h3 if.bind="member.family_connections.hasFamilyConnections">${'members.family-connections' & t}</h3>
+                <div class="family-chains">
                     <table class="noborder">
                         <tr if.bind="member.family_connections.parents && (member.family_connections.parents.pa || member.family_connections.parents.ma)">
                             <td class="relation-kind">${'parents' & t}</td>
@@ -99,7 +97,7 @@
             </div>
             <div class="col-md-6 fr-view" style="margin-bottom:16px;padding-left:20px;padding-right:30px;" 
                     if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
-                    <h4 innherhtml.bind="story_0.topic" style="margin-top:16px;margin-bottom:0px;color:gray;">
+                    <h4 style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${'members.life-summary' & t} ${member.member_info.first_name}
                     </h4>
                     <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;margin-bottom:8px;">
@@ -117,8 +115,8 @@
             <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-right fa-3x"></i></div>
             <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
-            <div class="col-md-3 story-box last notfirst" show.bind="story_4.story_text != ''">
-                <div show.bind="story_4.name">
+            <div class="col-md-3 col-sm-6 col-xs-12 story-box last notfirst" show.bind="story_4.story_text != ''">
+                <div class="member-story-header" show.bind="story_4.name">
                     <a class="goto-story-page" click.trigger="goto_story_page(story_4)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     <h4 dir="rtl">
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
@@ -131,8 +129,8 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-3 story-box notfirst" show.bind="story_3.story_text != ''">
-                <div show.bind="story_3.name" >
+            <div class="col-md-3 col-sm-6 col-xs-12 story-box notfirst" show.bind="story_3.story_text != ''">
+                <div class="member-story-header" show.bind="story_3.name" >
                     <a class="goto-story-page" click.trigger="goto_story_page(story_3)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     <h4 dir="rtl">
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
@@ -145,8 +143,8 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-3 story-box notfirst" show.bind="story_2.story_text != ''" >
-                <div show.bind="story_2.name" >
+            <div class="col-md-3 col-sm-6 col-xs-12 story-box notfirst" show.bind="story_2.story_text != ''" >
+                <div class="member-story-header" show.bind="story_2.name" >
                     <a class="goto-story-page" click.trigger="goto_story_page(story_2)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     <h4 dir="rtl" >
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
@@ -159,8 +157,8 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-3 story-box" show.bind="story_1.story_text != '' || user.privileges.EDITOR">
-                <div show.bind="story_1.name" >
+            <div class="col-md-3 col-sm-6 col-xs-12 story-box" show.bind="story_1.story_text != '' || user.privileges.EDITOR">
+                <div class="member-story-header" show.bind="story_1.name" >
                     <a class="goto-story-page" click.trigger="goto_story_page(story_1)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     <h4 dir="rtl">
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
