--- a/src/home/home.html
+++ b/src/home/home.html
@@ -64,9 +64,9 @@
             </div>
         </div>
     </div>
-    <div class="member-of-the-day row" dir="rtl">
+    <div class="member-of-the-day row" dir="${theme.rtltr}">
         <div class="col-xs-12">
-            <span class="hidden-xs" style="width:100px;text-align:right;margin-top:20px;">${member_prefix & t}</span>
+            <span class="hidden-xs marg-right" style="width:100px;text-align:right;margin-top:20px;">${member_prefix & t}</span>
             <span style="padding-left:20px;padding-top:6px;"><img src.bind="member_of_the_day.face_photo_url" width="60" style="border-radius:50%;" /></span>
             <span style="border-right:2px solid gray;margin-top:20px;margin-left:16px;padding-right:10px;">${member_of_the_day.name}</span>
             <span class="hidden-xs hidden-sm" if.bind="member_of_the_day.place_of_birth" style="border-right:2px solid gray;margin-top:20px;padding-right:10px;">
@@ -78,7 +78,7 @@
             <span class="hidden-xs hidden-sm" style="margin-top:20px;padding-right:10px;margin-left:16px;border-right:2px solid gray;" if.bind="member_of_the_day.year_of_death">  
                 ${died_in & t} ${member_of_the_day.year_of_death}
             </span>
-            <span class="hidden-xs" style="float:left;margin-top:20px;margin-left:16px;padding-right:16px;border-right:2px solid gray;cursor:pointer;"
+            <span class="hidden-xs marg-left" style="float:left;margin-top:20px;padding-right:16px;border-right:2px solid gray;cursor:pointer;"
                 click.delegate="jump_to_member_of_the_day_page(member_of_the_day.id)">
                 ${'home.to-the-page-of' & t} ${member_of_the_day.first_name}
             </span>
