--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./members.css"></require>
-    <div id="member-detail" class="container">
+    <div id="member-detail" class="container" style="height:775px;">
         <div class="row">
             <div id="breadcrumb" class="col-xs-12 font-size-150" dir="rtl">
                 <i class="fa fa-rotate-left pull-left" data-role="button" t="[title]go-back" click.trigger="go_back()"></i>
@@ -115,7 +115,7 @@
             <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-right fa-3x"></i></div>
             <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
-            <div class="col-md-3 col-sm-6 col-xs-12 story-box last notfirst" show.bind="story_4.story_text != ''">
+            <div class="col-md-3 col-sm-6 col-xs-12 story-box last notfirst" show.bind="story_4.story_text != ''" css="float:${theme.same_dir};">
                 <div class="member-story-header" show.bind="story_4.name">
                     <a class="goto-story-page" click.trigger="goto_story_page(story_4)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     <h4 dir="rtl">
@@ -129,7 +129,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" show.bind="story_3.story_text != ''">
+            <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" show.bind="story_3.story_text != ''" css="float:${theme.same_dir};">
                 <div class="member-story-header" show.bind="story_3.name" >
                     <a class="goto-story-page" click.trigger="goto_story_page(story_3)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     <h4 dir="rtl">
@@ -143,7 +143,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" show.bind="story_2.story_text != ''" >
+            <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" show.bind="story_2.story_text != ''" css="float:${theme.same_dir};" >
                 <div class="member-story-header" show.bind="story_2.name" >
                     <a class="goto-story-page" click.trigger="goto_story_page(story_2)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     <h4 dir="rtl" >
@@ -157,7 +157,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 hidden-xs story-box" show.bind="story_1.story_text != '' || user.privileges.EDITOR">
+            <div class="col-md-3 col-sm-6 hidden-xs story-box" show.bind="story_1.story_text != '' || user.privileges.EDITOR" css="float:${theme.same_dir};">
                 <div class="member-story-header" show.bind="story_1.name" >
                     <a class="goto-story-page" click.trigger="goto_story_page(story_1)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     <h4 dir="rtl">
