--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -1,8 +1,8 @@
 <template>
     <require from="./stories.css"></require>
 
-    <div style="margin-top:50px" class="content-area">
-        <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:16px;margin-right:0px;margin-left:0px;font-size:150%;padding-top:18px;">
+    <div style="margin-top:12px;width:1150px;margin-left:auto;margin-right:auto;" class="content-area">
+        <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:16px;margin-right:20px;margin-left:0px;font-size:150%;padding-top:18px;">
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;">
                 <i class="fa fa-rotate-left"  t="[title]go-back" click.trigger="go_back()"></i>
             </h3>
@@ -31,7 +31,7 @@
                     </div>
                     <div if.bind="! user.editing" class="col-md-5">
                     </div>
-                    <div show.bind="members.length>0" class="col-md-7">
+                    <div show.bind="members.length>0" class="col-md-7" style="padding-right:36px;">
                         <span style="float:right">${'stories.associated-members' & t}</span>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-7 justified-story full-story">
+            <div class="col-md-7 justified-story full-story" style="padding-right:36px;">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-8" if.bind="story.source">
                         <span style="float:right;direction:rtl">${story.source}:</span>
