home page panels respond to photo strip height changes

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="container">
-        <div class="row panel main-panel">
+        <div class="row panel main-panel" css="height:${panel_height}px;">
             <div class="col-md-3 panel-vid" style="direction:rtl;">
                 <ul>
                     <li repeat.for="video of video_list | filter:'youtube':'type'">
