photo-strip fails if dir="rtl"

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="row">
-            <photo-strip class="col-xs-12" source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom"
+            <photo-strip class="col-xs-12" source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom" dir="ltr"
                 settings.bind="{arrows:true, height:220}"></photo-strip>
         </div>
         <div id="member-detail-content" class="row" dir="rtl">
