--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
     <require from="app.css"></require>
     <require from="scrollbox.css"></require>
 
-    <div css="background-image:url('${theme.files.content_background}') min-height:${theme.min_height}px;">
+    <div css="background-image:url('${theme.files.content_background}'); min-height:${theme.min_height}px;">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color:white">
             <div class="container">
                 <div class="navbar-header navbar-right" style="padding-bottom:8px;">
