--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./members.css"></require>
-    <div id="member-detail" class="container" style="height:775px;">
+    <div id="member-detail" class="container" style="height:775px;padding-right:46px;padding-left:28px;">
         <div class="row">
             <div id="breadcrumb" class="col-xs-12 font-size-150" dir="rtl">
                 <i class="fa fa-rotate-left pull-left" data-role="button" t="[title]go-back" click.trigger="go_back()"></i>
@@ -95,7 +95,7 @@
                     <compose view-model="./member-edit" model.bind="member"></compose>
                 </div>
             </div>
-            <div class="col-md-6 fr-view" style="margin-bottom:16px;padding-left:20px;padding-right:30px;" 
+            <div class="col-md-6 fr-view" style="margin-bottom:20px;padding-left:20px;padding-right:30px;" 
                     if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
                     <h4 style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${'members.life-summary' & t} ${member.member_info.first_name}
@@ -111,7 +111,8 @@
                 </div>
             </div>
         </div>
-        <div id="stories" class="fr-view row ${theme.font-size}" if.bind="! user.editing" interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
+        <div id="stories" class="fr-view row ${theme.font-size}" if.bind="! user.editing" style="min-height:270px"
+            interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
             <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-right fa-3x"></i></div>
             <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
