--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -15,7 +15,7 @@
             <copy-to-clipboard if.bind="user.editing" content.bind="story_url" prefix.bind="host" style="float:left;"></copy-to-clipboard>
         </div>
         <div class="row" style="direction:rtl;">
-            <div class="col-md-5" style="padding-left:40px;">
+            <div class="col-md-5">
                 <photo-strip if.bind="has_associated_photos" source.bind="source" height.bind="220" action_key="Zoom2" 
                     dir="ltr" settings.bind="{arrows:true, height:220}"></photo-strip>
                 <div class="row" style="height:fit-content;font-size:150%;padding:12px;margin-top: 20px;">
