--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./stories.css"></require>
 
-    <div style="margin-top:50px" class="content-area">
+    <div style="margin-top:50px" class="container content-area">
         <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:16px;margin-right:0px;margin-left:0px;font-size:150%;padding-top:18px;">
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;">
                 <i class="fa fa-rotate-left"  t="[title]go-back" click.trigger="go_back()"></i>
