--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -117,7 +117,7 @@
             <!--member stories panel-->
             <div id="stories" class="fr-view row ${theme.font-size}" if.bind="! user.editing" css="min-height:270px;margin-left:-31px;margin-right:0px;height:${bottom_height}px;"
                 interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
-                <div class="col-md-3 col-sm-6 col-xs-12 story-box last notfirst" css="float:${theme.same_dir};">
+                <div class="col-md-3 col-sm-6 col-xs-12 story-box last notfirst" css="float:${theme.same_dir};height:${story_box_height}px;">
                     <div class="member-story-header" show.bind="story_4.name" show.bind="story_4.story_text != ''">
                         <a class="goto-story-page" click.trigger="goto_story_page(story_4)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                         <h4 dir="rtl">
@@ -131,7 +131,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};">
+                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};height:${story_box_height}px;">
                     <div class="member-story-header" show.bind="story_3.story_text != ''" >
                         <a class="goto-story-page" click.trigger="goto_story_page(story_3)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                         <h4 dir="rtl">
@@ -145,7 +145,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};" >
+                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};height:${story_box_height}px;" >
                     <div class="member-story-header" show.bind="story_2.story_text != ''" >
                         <a class="goto-story-page" click.trigger="goto_story_page(story_2)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                         <h4 dir="rtl" >
@@ -159,7 +159,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};">
+                <div class="col-md-3 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;">
                     <div class="member-story-header" show.bind="story_1.story_text != ''" >
                         <a class="goto-story-page" click.trigger="goto_story_page(story_1)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                         <h4 dir="rtl">
