--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -64,7 +64,7 @@
                     <input type="text" class="form-control" id="former_last_name" t="[placeholder]members.former-last-name" value.bind="member.member_info.former_last_name">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="birth_place" t="[placeholder]members.birth-place" value.bind="member.member_info.PlaceOfBirth">
+                    <input type="text" class="form-control" id="place_of_death" t="[placeholder]members.death-place" value.bind="member.member_info.place_of_death">
                 </div>
                 <!--div class="form-group">
                     <input type="text" class="form-control" id="date_of_death" t="[placeholder]members.date-of-death" value.bind="member.member_info.date_of_death_str">
@@ -89,7 +89,7 @@
                     <input type="text" class="form-control" id="last_name" t="[placeholder]members.last-name" value.bind="member.member_info.last_name">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="DateOfBirth" disabled.bind="true" value.bind="member.member_info.DateOfBirth">
+                    <input type="text" class="form-control" id="birth_place" t="[placeholder]members.birth-place" value.bind="member.member_info.PlaceOfBirth">
                 </div>
                 <!--div class="form-group">
                     <input type="text" class="form-control" id="date_of_birth" t="[placeholder]members.date-of-birth" value.bind="member.member_info.date_of_birth_str">
