--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -2,10 +2,11 @@
     <require from="./members.css"></require>
     <div id="member-detail" class="container" style="height:775px;padding-right:46px;padding-left:28px;">
         <div class="row">
-            <div id="breadcrumb" class="col-xs-12 font-size-150" dir="rtl">
+            <div id="breadcrumb" class="col-xs-12 font-size-150" style="background-color:#aaaaaa" dir="rtl">
                 <i class="fa fa-rotate-left pull-left" data-role="button" t="[title]go-back" click.trigger="go_back()"></i>
                 <span if.bind="member.member_info.id">${member.member_info.full_name }</span>
                 <span if.bind="! member.member_info.id">${'members.new-member' & t }</span>
+                <span style="color:white;font-size:85%;"> ${life_cycle_text} </span>
                 <copy-to-clipboard if.bind="user.editing" class="pull-left" content.bind="member_url"></copy-to-clipboard>
             </div>
         </div>
