--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./photos.css"></require>
 
-    <div style="margin-top:20px;width:1170px;margin-left:auto;margin-right:auto;min-height:755px;padding-right:30px;padding-left:16px;" class="content-area">
+    <div style="margin-top:20px;width:1170px;margin-left:auto;margin-right:auto;min-height:755px;padding-right:30px;padding-left:16px;" class="content-area photo-detail">
         <div class="row" 
             style="background-color:lightgrey;padding:10px;padding-top:14px;margin-bottom:15px;margin-right:0px;margin-left:0px;font-size:150%;height:64px;padding-top:20px;">
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;">
@@ -32,7 +32,10 @@
                             <p dir="rtl" if.bind="! user.editing" innerhtml.bind="photo_story.story_text">
                             </p>
                             <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-section', checkable: false}" story.bind="photo_story"></editable>
-                            <date-range label="${'photos.photo-date' & t}" base_date_str.bind="photo_date_str" span_size.bind="photo_date_span"
+                            <date-range label="${'photos.photo-date' & t}" 
+                                base_date_str.bind="photo_date_str" 
+                                span_size.bind="photo_date_datespan"
+                                range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
                                 change.delegate="update_photo_date($event)">
                             </date-range>
                         </div>
