--- a/src/home/home.html
+++ b/src/home/home.html
@@ -4,7 +4,7 @@
     <!-- Photo strip -->
     <div id="photo-strip">
         <photo-strip source.bind="photo_list" slides.bind="slides" id="1" action.bind="action" fullscreen.bind="true" height_change.trigger="on_height_change($event)"
-            action_key="Zoom1" settings.bind="{arrows:true, slide_show: 4}"></photo-strip>
+            action_key="Zoom1" settings.bind="{arrows:true, slide_show: 4}" style="padding:0;"></photo-strip>
     </div>
 
     <div class="container">
