--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -24,15 +24,15 @@
                             <a click.trigger="toggle_selection(option)" aubs-tooltip="text.bind:option.names; position:right;class:ms-tooltip;">
                                 ${option.name}
                             </a>
-                        </span>
-                        <span class="span-i">
-                            <a click.trigger="unmerge_options(option, $event)">
-                                <i class="fa fa-paperclip fa-rotate-90 tool" aubs-tooltip="text.bind:why_unclip;position: top;class:ms-tooltip;"></i>
-                            </a>
-                            <!--<a if.bind="user.advanced && !user.editing" click.trigger="toggle_sign(option, $event)">
-                                <-- The rotatate-180 thing here and below is kind of voodoo. It is crazy without it >
-                                <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
-                            </a>-->
+                            <span class="span-i">
+                                <a click.trigger="unmerge_options(option, $event)">
+                                    <i class="fa fa-paperclip fa-rotate-90 tool" aubs-tooltip="text.bind:why_unclip;position: top;class:ms-tooltip;"></i>
+                                </a>
+                                <!--<a if.bind="user.advanced && !user.editing" click.trigger="toggle_sign(option, $event)">
+                                    <-- The rotatate-180 thing here and below is kind of voodoo. It is crazy without it >
+                                    <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
+                                </a>-->
+                            </span>
                         </span>
                     </div>
                 </li>
@@ -45,20 +45,20 @@
                             <a click.trigger="toggle_selection(option)">
                                 ${option.name}
                             </a>
-                        </span>
-                        <span class="span-i">
-                            <a if.bind="can_merge" click.trigger="merge_options(option, $event)">
-                                <i class="fa fa-paperclip fa-rotate-90 tool" aubs-tooltip="text.bind:why_clip;position: top;class:ms-tooltip;"></i>
-                            </a>
-                            <a if.bind="can_set_sign" click.trigger="toggle_sign(option, $event)">
-                                <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
-                            </a>
-                            <a if.bind="can_edit_name" click.trigger="edit_option(option, $event)">
-                                <i class="fa fa-pencil fa-rotate-180 fa-rotate-180 tool"></i>
-                            </a>
-                            <a if.bind="can_delete" click.trigger="remove_option(option, $event)">
-                                <i class="fa fa-trash fa-rotate-180 tool"></i>
-                            </a>
+                            <span class="span-i">
+                                <a if.bind="can_merge" click.trigger="merge_options(option, $event)">
+                                    <i class="fa fa-paperclip fa-rotate-90 tool" aubs-tooltip="text.bind:why_clip;position: top;class:ms-tooltip;"></i>
+                                </a>
+                                <a if.bind="can_set_sign" click.trigger="toggle_sign(option, $event)">
+                                    <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
+                                </a>
+                                <a if.bind="can_edit_name" click.trigger="edit_option(option, $event)">
+                                    <i class="fa fa-pencil fa-rotate-180 fa-rotate-180 tool"></i>
+                                </a>
+                                <a if.bind="can_delete" click.trigger="remove_option(option, $event)">
+                                    <i class="fa fa-trash fa-rotate-180 tool"></i>
+                                </a>
+                            </span>
                         </span>
                     </div>
                 </li>
@@ -66,11 +66,11 @@
         </div>
         <!-- Under the line come all unselected options -->
         <div class="row options unselected" 
-            css="max-height:${filter || ! settings.show_only_if_filter ? height_unselected : 0}px;" 
+            css="max-height:${filter || display_option_list ? height_unselected : 0}px;" 
             if.bind="options && options.length > 0 && (filter.length > 0 || ! settings.show_only_if_filter)">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : all_selected : 'exclude' | take : 199">
-                    <div class="option-item" css="margin:0;padding:0;width:${inner_width}px">
+                    <div class="option-item" css="margin:0;padding:0;padding-right:2px;width:${inner_width}px">
                         <a click.trigger="toggle_selection(option)">${option.name}</a>
                     </div>
                 </li>
