--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -16,7 +16,7 @@
         </div>
         <div class="row" style="direction:rtl;">
             <div class="col-md-5">
-                <photo-strip if.bind="has_associated_photos" source.bind="source" height.bind="220" action_key="Zoom2" 
+                <photo-strip if.bind="has_associated_photos" source.bind="source" height.bind="220" action_key="Zoom2" style="padding:0;"
                     dir="ltr" settings.bind="{arrows:true, height:220}"></photo-strip>
                 <div class="row" style="height:fit-content;font-size:150%;padding:12px;margin-top: 20px;">
                     <div if.bind="user.editing" class="col-md-5" >
